# detect-fake-with-fake

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: cache.yaml  lint-and-test.yaml
docs/: index.html
environments/: Dockerfile  envs.env.sample
environments/ci/: .env  docker-compose.yaml
environments/cpu/: docker-compose.yaml
environments/gpu/: docker-compose.yaml
tests/src/: test_sample.py
